@@ -1,4 +1,4 @@
-﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
 <title>PRADO Framework for PHP 5</title>
@@ -92,6 +92,11 @@ PRADO component tags when you use it to edit PRADO templates.
 <li><a href="mailto:Christophe.Boulain@gmail.com">Christophe Boulain</a></li>
 </ul>
 
+<h3>Translations</h3>
+<ul>
+<li>Indonesian: <a href="mailto:zaenalm@gmail.com">Zaenal Mutaqin</a></li>
+</ul>
+
 <h3>Prado v2 Maintenance Team</h3>
 <ul>
 <li><a href="mailto:rodolfo@equinoxe.g-networks.net">Rodolfo Gonzales</a></li>
@@ -113,7 +118,7 @@ PRADO component tags when you use it to edit PRADO templates.
 <ul>
 <li>Stever for providing an Apple G3 notebook for testing safari browser issues.</li>
 <li>Stanislav Yordanov - the script of generating Dreameweaver extension for PRADO</li>
-<li>AndrÃƒÆ’Ã‚Â©s Adolfo Testi - original concept and naming for Active Controls.</li>
+<li>Andrés Adolfo Testi - original concept and naming for Active Controls.</li>
 <li><a href="http://www.jackslocum.com/">Jack Slocum</a> - inspiration for the quickstart commenting system.</li>
 <li>Cesar Ramos - Active Record driver for IBM DB2.</li>
 <li>All PRADO users - great suggestions, feedback and support</li>
